--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@ html{
 }
 body{
   margin: 0 auto;
-  padding: 15% ;
+  padding: 5% ;
+}
+p {
+  margin: 0px;
+  padding: 0px;
 }
 h1{
   padding:35px;
@@ -18,6 +22,9 @@ h1{
   padding: 3%;
   background: rgb(241,237,238);
   color: solid black;
+}
+.dogs{
+  max-width: 100%;
 }
 
 .gender {
@@ -53,7 +60,7 @@ h1{
 }
 .column2 {
   float: left;
-  width: 30%;
+  max-width: 30%;
   padding: 3px;
   display: flex;
   flex-wrap: wrap;
@@ -63,28 +70,13 @@ h1{
   width: 30%;
   padding: 3px;
 }
-/* .overlay{
-  display: flex;
-  justify-content: center;
-} */
+
 .dog_filter{
   display: flex;
   align-content: center;
   margin: 3rem;
   flex-wrap: wrap;
   
-}
-
-.overlay{
-  padding:35px;
-  align-items: flex-start;
-  display:flex;
-  flex-direction: row;
-  align-content: center;
-  display: flex; 
-  width: 1000px;
-  
-
 }
 
 .dogs{
@@ -97,67 +89,45 @@ h1{
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding: 3px;
-  margin: 1px;
+  padding: 10px;
+  margin: 5px;
 }
 .Tags{
   border:3px; 
   border-style:solid blue; 
-  padding:.1em;
+  padding:.3em;
   background: rgb(118, 223, 243);
   border-radius: 3em;
 }
-/* nav {
-  margin-top: 2rem;
+footer {
+  align-content: left;
   display: flex;
-  justify-content: space-between;
-  height: 15rem;
-  width: 100%;
-} */
-
-.donate {
-  width: 500px;
-  text-align: center;
-  line-height: 15rem;
+  flex-direction: row;
+  /* justify-content: flex-start; */
+  /* align-items: center;
+  text-align: center; */
+  line-height: 14rem;
+  /* padding-top:3%; */
+  /* padding-bottom:3%; */
+  /* width: 100%; */
+  font-size: 2rem;
   color: white;
-  background-image: url(starter_files/images/donate.jpg);
-  background-color: rgb(100, 114, 240 );
-  background-blend-mode: overlay;
-  background-position: center;
-  /* display: flex;
-  justify-content: flex-start */
+  font-weight: 400;
+  /* flex:1 1 auto; */
+  color: white;
 }
 .volunteer {
-  width: 500px;
-  text-align: center;
-  line-height: 15rem;
-  color: white;
-  background-image: url(starter_files/images/volunteer.jpg);
-  background-color: rgb(100, 114, 240);
-  background-blend-mode: overlay;
-  background-position: center;
+  background:
+      linear-gradient(rgba(100, 114, 240, 0.6), rgba(100, 114, 240, 0.6)),
+      url(starter_files/images/volunteer.jpg) center/cover;
+}
+.donate {
+  background:
+      linear-gradient(rgba(100, 114, 240, 0.6), rgba(100, 114, 240, 0.6)),
+      url(starter_files/images/donate.jpg) center/cover;
 }
 .our_location {
-  width: 500px;
-  text-align: center;
-  line-height: 15rem;
-  color: white;
-  background-image: url(starter_files/images/location.png);
-  background-color: rgb(100, 114, 240);
-  background-blend-mode: overlay;
-  background-position: center;
+  background:
+      linear-gradient(rgba(100, 114, 240, 0.6), rgba(100, 114, 240, 0.6)),
+      url(starter_files/images/location.png) center/cover;
 }
-footer{
-  /* margin: 0 auto; */
-  /* display: flex; */ */
-  /* flex-direction: row;
-  
- 
-  /* align-content: center; */
-  
-   /* width: 100%;
-  color: white;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: auto; */
-} 
